--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,23 @@
-version: "3.9"  # optional since v1.27.0
+# Use root/example as user/password credentials
+
+# TODO: make this configurable
+version: '3.3'
 services:
-  web:
-    build: .
+  db:
+    image: mysql:8.0.0
+    restart: always
+    container_name: prisma-mysql
+    environment:
+      MYSQL_DATABASE: 'prisma'
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER: 'root'
+      # You can use whatever password you like
+      MYSQL_PASSWORD: 'user'
+      # Password for root access
+      MYSQL_ROOT_PASSWORD: 'user'
     ports:
-      - "8000:5000"
-    volumes:
-      - .:/code
-      - logvolume01:/var/log
-    links:
-      - redisex
-  redis:
-    image: redis
-volumes:
-  logvolume01: {}
+      # <Port exposed> : < MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+      # Opens port 3306 on the container
+      - '3306'
